fixing event box bottom spacing

--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -30,6 +30,12 @@ $screen-xs-max:              ($screen-xs - 1) !default;
     .tribe-events-list .type-tribe_events {
         margin-bottom: 20px !important;
     }
+
+    .vcalendar {
+        .hentry.tribe-events-first, .type-tribe_events.tribe-events-first , .type-tribe_events {
+            padding-bottom: 20px !important;
+        }
+    }
 }
 
 @media (min-width: $screen-xs) {
